--- a/cmf-website-new/package.json
+++ b/cmf-website-new/package.json
@@ -12,6 +12,7 @@
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.5.1",
+    "@astrojs/vercel": "^8.2.7",
     "@hookform/resolvers": "^5.2.1",
     "@hubspot/api-client": "^13.2.0",
     "@types/node": "^24.3.0",
