--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,6 @@
 {
-  "buildCommand": "cd cmf-website-new && npm install && npm run build",
-  "outputDirectory": "cmf-website-new/dist",
+  "buildCommand": "cd cmf-website-new && npm run build",
   "installCommand": "cd cmf-website-new && npm install",
-  "framework": "astro",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ]
+  "devCommand": "cd cmf-website-new && npm run dev",
+  "root": "cmf-website-new"
 }
