Fix Vercel schema validation error - remove unsupported root property

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "buildCommand": "cd cmf-website-new && npm run build",
-  "installCommand": "cd cmf-website-new && npm install",
-  "devCommand": "cd cmf-website-new && npm run dev",
-  "root": "cmf-website-new"
+  "buildCommand": "cd cmf-website-new && npm install && npm run build",
+  "installCommand": "cd cmf-website-new && npm install"
 }
