--- a/cmf-website-new/package.json
+++ b/cmf-website-new/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "vercel-build": "astro build"
   },
   "dependencies": {
     "@astrojs/node": "^9.4.3",
