Fix Vercel 404: configure for SSR with proper output directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "installCommand": "cd cmf-website-new && npm install",
   "buildCommand": "cd cmf-website-new && npm run build",
-  "outputDirectory": "cmf-website-new/.vercel/output/static"
+  "outputDirectory": "cmf-website-new/.vercel/output"
 }
