Remove outputDirectory from vercel.json - let Vercel auto-detect .vercel/output

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
   "installCommand": "cd cmf-website-new && npm install",
-  "buildCommand": "cd cmf-website-new && npm run build",
-  "outputDirectory": "cmf-website-new/.vercel/output"
+  "buildCommand": "cd cmf-website-new && npm run build"
 }
